# santa-2020

./: .gitignore  pyproject.toml
config/: minimum_decitoin_tree_regression_model_40.yaml  minimum_decitoin_tree_regression_model_80.yaml  simple_decitoin_tree_regression_model.yaml  top_agents_catboost_regression_model.yaml  top_agents_catboost_regression_model_10.yaml  top_agents_catboost_regression_model_2.yaml  top_agents_catboost_regression_model_6.yaml  top_agents_catboost_regression_model_decay.yaml  top_agents_catboost_regression_model_feats.yaml  top_agents_catboost_regression_model_feats2.yaml  top_agents_catboost_regression_model_feats_10.yaml  top_agents_catboost_regression_model_feats_6.yaml  top_agents_catboost_regression_model_feats_8.yaml  top_agents_decition_tree_regression_model.yaml  top_agents_lightgbm_regression_model.yaml  top_agents_lightgbm_regression_model_decay.yaml  train_minimum_decitoin_tree_regression_model_40.yaml  train_minimum_decitoin_tree_regression_model_80.yaml  train_simple_decitoin_tree_regression_model.yaml  train_top_agents_catboost_classifier_model_feats2.yaml  train_top_agents_catboost_classifier_model_feats2_depth_4.yaml  train_top_agents_catboost_regression_model.yaml  train_top_agents_catboost_regression_model_6.yaml  train_top_agents_catboost_regression_model_decay.yaml  train_top_agents_catboost_regression_model_deep.yaml  train_top_agents_catboost_regression_model_feats2.yaml  train_top_agents_catboost_regression_model_feats_10.yaml  train_top_agents_catboost_regression_model_feats_6.yaml  (+4 more)
runner/: compose_train_data.py  (+7 more)
(+27 files in other folders)
